[package]
name = "belt-dwp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex-literal = "0.4"
belt-block = "0.1"
aead = { version = "0.5", default-features = false }
cipher = "0.4"
universal-hash = "0.5"
opaque-debug = "0.3"
belt-ctr = "0.1"


[target.'cfg(any(target_arch = "x86_64", target_arch = "x86"))'.dependencies]
cpufeatures = "0.2"